fixed non clickable boxing glove on small screens

--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@
 
 /* ALGEMEEN */
 
-body {
+body, .ingelogd {
   background-color: var(--body-bg);
   width: 100%;
   height: 100dvh;
@@ -594,7 +594,7 @@ nav p {
   height: 150px;
   width: 300px;
   padding: 0;
-  justify-content: start;
+  justify-content: center;
   align-items: end;
   gap: 1rem;
   overflow-x: scroll;
